<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cerebral.motivationmonday.LoginActivity">

    <ImageView
        style="@style/BackgroundImageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/imageView"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/btnskip"
        android:text="@string/skip"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/colorAccent"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        fontPath="fonts/poppinslight.ttf"/>

    <Button
        android:id="@+id/btnlogin"
        android:text="@string/LOGIN"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/colorAccent"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignTop="@+id/btnskip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        fontPath="fonts/poppinslight.ttf"/>

    <TextView
        android:text="@string/title"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        android:id="@+id/titlelogin"
        fontPath="fonts/loveloline.otf"
        android:layout_above="@+id/btnskip"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/slogan"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        fontPath="fonts/poppinslight.ttf"
        android:layout_above="@+id/btnskip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/textView3"
        fontPath="fonts/poppinslight.ttf"
        android:layout_above="@+id/slogan"
        android:layout_alignRight="@+id/titlelogin"
        android:layout_alignEnd="@+id/titlelogin"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>
